--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,6 +3,7 @@
   <p>You are logged in as <%= Current.session.user.email_address %></p>
   
   <div class="actions">
+    <%= link_to "New Game", new_game_path, class: "button" %>
     <%= link_to "Sign out", session_path, data: { turbo_method: :delete } %>
   </div>
 </div>
