Use form_errors helper method instead of render partial

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Game</h1>
 
 <%= form_with model: @game do |form| %>
-  <%= render "application/form_errors", instance: @game %>
+  <%= form_errors(@game) %>
 
   <div>
     <%= form.label :name %>
