--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -20,11 +20,9 @@
           </p>
           <p>
             <% if game.owner == Current.user %>
-              <%= button_to "Delete", game_path(game), method: :delete, form_class: "inline" %>
-            <% else %>
-              <% if player = game.players.find_by(user: Current.user) %>
-                <%= button_to "Quit", games_player_path(player), method: :delete, form_class: "inline" %>
-              <% end %>
+              <%= button_to "Delete", game_path(game), method: :delete, class: "button --small" %>
+            <% elsif (player = game.players.find_by(user: Current.user)) %>
+              <%= button_to "Quit", games_player_path(player), method: :delete, class: "button --small" %>
             <% end %>
           </p>
         </div>
