--- a/app/views/games/_cards.html.erb
+++ b/app/views/games/_cards.html.erb
@@ -19,7 +19,7 @@
               <td><%= card.rank %></td>
               <% if @game.playing? %>
                 <td>
-                  <% if Current.player.is_active_player? %>
+                  <% if Current.player.active? %>
                     <%= button_to "Play", game_plays_path(@game), method: :post, params: { play: { card_id: card.id } }, class: "button" %>
                   <% end %>
                 </td>
