--- a/app/views/games/_play.html.erb
+++ b/app/views/games/_play.html.erb
@@ -62,7 +62,7 @@
       <p>No cards played yet in this trick</p>
     <% end %>
 
-    <% if Current.player&.is_active_player? %>
+    <% if Current.player&.active? %>
       <p class="highlight"><strong>Your turn to play!</strong></p>
     <% else %>
       <% active_player = @game.active_player %>
