Use play_order method in play view

--- a/app/views/games/_play.html.erb
+++ b/app/views/games/_play.html.erb
@@ -23,7 +23,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @game.players.order(:order).each do |player| %>
+        <% @game.play_order.each do |player| %>
           <tr>
             <td><%= player.user.name %></td>
             <td><%= player.team %></td>
